# Backend

./: .gitignore  requirements.txt  ros2_apt_packages.txt  ros2_python_packages.txt
api/: models.py  urls.py
api/migrations/: 0001_initial.py  0002_path_point.py  0002_remove_point_cont_point_ee.py  0003_global.py  0003_home.py  0004_alter_path_path_id_alter_point_path.py  0004_rename_pitch_home_t1_rename_roll_home_t2_and_more.py  0005_alter_home_options_remove_home_home_id_alter_home_id.py  0005_site_map.py  0006_map.py  0006_rename_pitch_global_t1_rename_roll_global_t2_and_more.py  0007_accounts.py  0007_aruco.py  0008_goalpose.py  0009_goalpose_name.py  0010_goalpose_goal_id.py  0011_action.py  0012_action_grip.py
api/views/: InverseKinematics.py  Inverse_Kinematics.py  Kinematics.py  action.py  components.py  configuration.py  login.py  maps.py  move.py  move_path.py  plc_manager.py  position_list.py  power_robot.py  teach_path.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/ammr_plc_node/lib/ammr_plc_node/: ammr_plc_node  test_node  tf_relay
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/ammr/: CMakeLists.txt  package.xml
ros2_ws/src/ammr/config/: ammr_gazebo_config.yaml  ammr_rviz2_config.rviz
ros2_ws/src/ammr/controller/: moveit2_ctrllr.py  publish_joint_state.py
ros2_ws/src/ammr/launch/: ammr.launch.xml  ammr_gazebo.launch.py  ammr_moveit2.launch.py  ammr_rviz2.launch.py  ammr_setup.launch.py  pick_place_demo.launch.py
ros2_ws/src/ammr/meshes/: Depth_Camera_Link.STL  Manipulator_J5_Link.STL
ros2_ws/src/ammr/urdf/: ammr.csv  ammr.ros2_control.xacro  ammr.urdf  ammr_base.xacro  ammr_camera.xacro  ammr_drivewheel.xacro  ammr_main.urdf.xacro  ammr_manipulator.xacro  ammr_sensor.xacro
ros2_ws/src/ammr_mobile_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/ammr_mobile_node/ammr_mobile_node/: mobile_robot.py
ros2_ws/src/ammr_mock_components/: CMakeLists.txt  package.xml
ros2_ws/src/ammr_mock_components/config/: my_controllers.yaml
ros2_ws/src/ammr_mock_components/launch/: mock.launch.py  test_mock.launch.py
ros2_ws/src/ammr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/ammr_moveit_config/config/: ammr_main.ros2_control.xacro  ammr_main.srdf  ammr_main.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  moveit_mtc.rviz  ros2_controllers.yaml
ros2_ws/src/ammr_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/ammr_moveit_controller/: CMakeLists.txt  package.xml
ros2_ws/src/ammr_moveit_controller/include/ammr_moveit_controller/: move_robot_service.h
ros2_ws/src/ammr_moveit_controller/src/: ammr_moveit_controller.cpp  ammr_moveit_controller_copy.cpp  ammr_moveit_demo.cpp  ammr_mtc_cartesian.cpp  ammr_mtc_demo.cpp  mtc_node.cpp
ros2_ws/src/ammr_moveit_controller/srv/: MoveRobot.srv
ros2_ws/src/ammr_plc_node/: setup.cfg  setup.py
ros2_ws/src/ammr_plc_node/ammr_plc_node/: action_control.py  manipulator.py  plc_manager_node.py  plc_node.py
ros2_ws/src/ammr_plc_node/ammr_plc_node.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ros2_ws/src/aruco_node/: package.xml  setup.py
ros2_ws/src/aruco_node/aruco_node/: ArucoNode copy.py  ArucoNode.py  ArucoScan.py
ros2_ws/src/custom_service/: CMakeLists.txt  package.xml
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_robot_brightup/: \
ros2_ws/src/my_robot_brightup/config/: ekf.yaml  nav2_params.yaml  rtabmap_sim.rviz
ros2_ws/src/my_robot_brightup/description/: robot.urdf.xacro
ros2_ws/src/my_robot_brightup/launch/: launch_sim.launch.py  navigation_launch.py  rtabmap_launch.py
ros2_ws/src/my_robot_brightup/world/: house.world  house1.world  house2.world
ros2_ws/src/my_robot_hw/: CMakeLists.txt  my_robot_hw.xml  package.xml
ros2_ws/src/my_robot_hw/bringup/config/: ammr_main.ros2_control.xacro  ammr_main.srdf  chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  ompl_planning.yaml  ros2_controllers.yaml
ros2_ws/src/my_robot_hw/bringup/launch/: ammr_hw.launch.py  ammr_moveit_control.launch.py
ros2_ws/src/my_robot_hw/description/launch/: ammr_rviz2.launch.py  view_robot.launch.py
ros2_ws/src/my_robot_hw/description/meshes/: Camera_Link.STL  Diff_Wheel_Left_Link.STL  Diff_Wheel_Right_Link.STL  Left_Drive_wheel_Link.STL  Manipulator_J1_Link.STL  Manipulator_J2_Link.STL  Manipulator_J5_Link.STL  Manipulator_J6_Link.STL
ros2_ws/src/my_robot_hw/description/ros2_control/: ammr_main.ros2_control.xacro  ros2_controllers.yaml
ros2_ws/src/my_robot_hw/description/urdf/: ammr.urdf  ammr_base.xacro  ammr_camera.xacro  ammr_drivewheel.xacro  ammr_gazebo.xacro  ammr_main.urdf.xacro  ammr_manipulator.xacro  ammr_sensor.xacro
ros2_ws/src/my_robot_hw/hardware/: ammr_system.cpp  tét.cpp
ros2_ws/src/my_robot_hw/hardware/include/my_robot_hw/: ammr_system.hpp
ros2_ws/src/my_robot_hw/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
ros2_ws/src/nav2_ipso_planner/: CMakeLists.txt
ros2_ws/src/nav2_ipso_planner/src/: TrajectoryGeneration.cpp  ipso.cpp  ipso_planner.cpp
ros2_ws/src/robot_pose_publisher/: package.xml  setup.py
ros2_ws/src/robot_pose_publisher/launch/: robot_pose_publisher.launch.py
ros2_ws/src/robot_pose_publisher/robot_pose_publisher/: robot_pose_publisher.py
ros2_ws/src/robot_publisher/: setup.cfg  setup.py
ros2_ws/src/robot_subscriber/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_subscriber/robot_subscriber/: API_move.py
ros2_ws/src/ros_imu/: setup.py
ros2_ws/src/ros_imu/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/ros_imu/log/: latest_build
ros2_ws/src/ros_imu/ros_imu/: Node_imu.py  ros_imu.py
ros2_ws/src/ros_imu/ros_imu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/: gunicorn_config.py  settings.py
(+90 files in other folders)
